I just wrote some text explaining (for noobs - read:me) the code that we just wrote today.

--- a/DementiaProject/main.ipynb
+++ b/DementiaProject/main.ipynb
@@ -756,6 +756,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Missing values \n",
+    "To check whether the dataset is containing missing values, we run the following code: "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
@@ -773,6 +781,13 @@
    ],
    "source": [
     "dementia_data.isnull().values.any()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As the we get a 'True', we now know that there is missing data in the dataset, to check which columns are missing data and how many rows in the columns are having values, we use the count()-method "
    ]
   },
   {
