--- a/dementia_project/dementia_analysis.ipynb
+++ b/dementia_project/dementia_analysis.ipynb
@@ -4,47 +4,45 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Dementia Project\n",
+    "# Dementia Analysis\n",
     "\n",
-    "Project description here ..."
+    "The following Jupyter notebook in Python covers our analysis of dementia data. All related files for this analysis can be found in the `dementia_project` folder.\n",
+    "\n",
+    "## Table of Contents\n",
+    "\n",
+    "1. [Setup](#setup)\n",
+    "2. [Explore the dataset](#explore-the-dataset)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2. 1. Import dataset and libraries \n",
-    "\n"
+    "## 1. Setup\n",
+    "\n",
+    "### Import libraries"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Load the dataset"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\annik\\AppData\\Local\\Temp\\ipykernel_17580\\2937650959.py:1: DeprecationWarning: \n",
-      "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
-      "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
-      "but was not found to be installed on your system.\n",
-      "If this would cause problems for you,\n",
-      "please provide us feedback at https://github.com/pandas-dev/pandas/issues/54466\n",
-      "        \n",
-      "  import pandas as pd\n"
-     ]
-    }
-   ],
-   "source": [
-    "import pandas as pd\n",
-    "import numpy as np\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -249,14 +247,21 @@
        "[5 rows x 22 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dementia_data = pd.read_csv(\"OPTIMAL_combined_3studies_6feb2020.csv\", delimiter=\",\")\n",
-    "dementia_data.head()"
+    "dementia_dataset = pd.read_csv(\"dementia_studies_data.csv\", delimiter=\",\")\n",
+    "dementia_dataset.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2. Explore the dataset"
    ]
   },
   {
@@ -640,7 +645,7 @@
     }
    ],
    "source": [
-    "dementia_data"
+    "dementia_dataset"
    ]
   },
   {
@@ -1731,7 +1736,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
