chore: small formatting changes

--- a/dementia_project/dementia_analysis.ipynb
+++ b/dementia_project/dementia_analysis.ipynb
@@ -11,7 +11,8 @@
     "## Table of Contents\n",
     "\n",
     "1. [Setup](#setup)\n",
-    "2. [Explore the dataset](#explore-the-dataset)"
+    "2. [Explore the dataset](#explore-the-dataset)\n",
+    "3. [Clean the dataset](#clean-the-dataset)"
    ]
   },
   {
@@ -764,7 +765,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Missing values \n",
+    "## 3. Clean the dataset\n",
+    "\n",
+    "### Missing values\n",
+    "\n",
     "To check whether the dataset is containing missing values, we run the following code: "
    ]
   },
@@ -785,7 +789,7 @@
     }
    ],
    "source": [
-    "dementia_data.isnull().values.any()\n"
+    "dementia_data.isnull().values.any()"
    ]
   },
   {
@@ -876,7 +880,7 @@
     }
    ],
    "source": [
-    "dementia_data.isna().sum()\n"
+    "dementia_data.isna().sum()"
    ]
   },
   {
@@ -1269,8 +1273,7 @@
     }
    ],
    "source": [
-    "pd.set_option('display.max_columns',None)\n",
-    "## \n",
+    "pd.set_option('display.max_columns', None)\n",
     "dementia_data[dementia_data[\"smoking\"].isnull()]\n"
    ]
   },
@@ -1667,7 +1670,7 @@
     }
    ],
    "source": [
-    "dementia_data[dementia_data[\"Global\"].isnull()]\n"
+    "dementia_data[dementia_data[\"Global\"].isnull()]"
    ]
   },
   {
@@ -1711,13 +1714,6 @@
    "source": [
     "dementia_data.isna().sum()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
