chore: toc change

--- a/dementia_project/dementia_analysis.ipynb
+++ b/dementia_project/dementia_analysis.ipynb
@@ -11,15 +11,15 @@
     "## Table of Contents\n",
     "\n",
     "1. [Setup](#setup)\n",
-    "2. [Explore the dataset](#explore-the-dataset)\n",
-    "3. [Clean the dataset](#clean-the-dataset)"
+    "2. [Explore the dataset](#explore)\n",
+    "3. [Clean the dataset](#clean)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1. Setup\n",
+    "## 1. Setup <a name=\"setup\"></a>\n",
     "\n",
     "### Import libraries"
    ]
@@ -262,7 +262,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2. Explore the dataset"
+    "## 2. Explore the dataset <a name=\"explore\"></a>"
    ]
   },
   {
@@ -765,7 +765,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3. Clean the dataset\n",
+    "## 3. Clean the dataset <a name=\"clean\"></a>\n",
     "\n",
     "### Missing values\n",
     "\n",
