--- a/dementia_project/dementia_analysis.ipynb
+++ b/dementia_project/dementia_analysis.ipynb
@@ -1447,314 +1447,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{1: 3,\n",
-      " 2: 2,\n",
-      " 3: 2,\n",
-      " 4: 3,\n",
-      " 5: 3,\n",
-      " 6: 2,\n",
-      " 7: 3,\n",
-      " 8: 3,\n",
-      " 9: 3,\n",
-      " 10: 2,\n",
-      " 11: 2,\n",
-      " 12: 3,\n",
-      " 13: 3,\n",
-      " 14: 2,\n",
-      " 15: 3,\n",
-      " 16: 3,\n",
-      " 17: 3,\n",
-      " 18: 3,\n",
-      " 19: 2,\n",
-      " 20: 3,\n",
-      " 22: 2,\n",
-      " 23: 3,\n",
-      " 25: 2,\n",
-      " 26: 3,\n",
-      " 27: 3,\n",
-      " 28: 3,\n",
-      " 29: 3,\n",
-      " 30: 2,\n",
-      " 31: 3,\n",
-      " 32: 3,\n",
-      " 33: 3,\n",
-      " 34: 3,\n",
-      " 35: 2,\n",
-      " 36: 3,\n",
-      " 37: 2,\n",
-      " 38: 3,\n",
-      " 39: 3,\n",
-      " 40: 3,\n",
-      " 41: 3,\n",
-      " 42: 3,\n",
-      " 43: 3,\n",
-      " 44: 2,\n",
-      " 45: 3,\n",
-      " 46: 2,\n",
-      " 47: 3,\n",
-      " 48: 2,\n",
-      " 49: 2,\n",
-      " 50: 3,\n",
-      " 51: 3,\n",
-      " 53: 2,\n",
-      " 54: 3,\n",
-      " 55: 3,\n",
-      " 56: 2,\n",
-      " 57: 2,\n",
-      " 58: 2,\n",
-      " 59: 3,\n",
-      " 60: 3,\n",
-      " 61: 3,\n",
-      " 62: 2,\n",
-      " 63: 2,\n",
-      " 64: 3,\n",
-      " 65: 3,\n",
-      " 66: 2,\n",
-      " 67: 2,\n",
-      " 68: 2,\n",
-      " 69: 2,\n",
-      " 70: 3,\n",
-      " 71: 3,\n",
-      " 72: 3,\n",
-      " 73: 3,\n",
-      " 74: 3,\n",
-      " 75: 3,\n",
-      " 76: 3,\n",
-      " 77: 3,\n",
-      " 78: 3,\n",
-      " 79: 2,\n",
-      " 80: 3,\n",
-      " 81: 3,\n",
-      " 82: 3,\n",
-      " 83: 2,\n",
-      " 84: 2,\n",
-      " 85: 3,\n",
-      " 86: 3,\n",
-      " 87: 2,\n",
-      " 88: 2,\n",
-      " 89: 2,\n",
-      " 90: 2,\n",
-      " 91: 3,\n",
-      " 92: 2,\n",
-      " 93: 3,\n",
-      " 95: 3,\n",
-      " 96: 2,\n",
-      " 97: 3,\n",
-      " 98: 3,\n",
-      " 99: 2,\n",
-      " 100: 3,\n",
-      " 101: 2,\n",
-      " 102: 2,\n",
-      " 103: 2,\n",
-      " 104: 3,\n",
-      " 105: 3,\n",
-      " 106: 3,\n",
-      " 107: 2,\n",
-      " 108: 3,\n",
-      " 109: 3,\n",
-      " 110: 3,\n",
-      " 111: 3,\n",
-      " 112: 2,\n",
-      " 113: 3,\n",
-      " 114: 2,\n",
-      " 115: 2,\n",
-      " 116: 2,\n",
-      " 117: 3,\n",
-      " 120: 3,\n",
-      " 121: 2,\n",
-      " 122: 2,\n",
-      " 123: 2,\n",
-      " 124: 2,\n",
-      " 125: 2,\n",
-      " 126: 2,\n",
-      " 127: 3,\n",
-      " 128: 2,\n",
-      " 129: 3,\n",
-      " 130: 3,\n",
-      " 131: 2,\n",
-      " 132: 3,\n",
-      " 133: 2,\n",
-      " 134: 2,\n",
-      " 135: 2,\n",
-      " 137: 2,\n",
-      " 139: 2,\n",
-      " 140: 2,\n",
-      " 143: 2,\n",
-      " 144: 2,\n",
-      " 148: 2,\n",
-      " 151: 2,\n",
-      " 153: 2,\n",
-      " 154: 2,\n",
-      " 157: 2,\n",
-      " 161: 2,\n",
-      " 162: 2,\n",
-      " 167: 2,\n",
-      " 171: 2,\n",
-      " 175: 2,\n",
-      " 176: 2,\n",
-      " 179: 2,\n",
-      " 181: 2,\n",
-      " 182: 2,\n",
-      " 185: 2,\n",
-      " 187: 2,\n",
-      " 190: 2,\n",
-      " 191: 2,\n",
-      " 192: 2,\n",
-      " 193: 2,\n",
-      " 195: 2,\n",
-      " 200: 2,\n",
-      " 201: 2,\n",
-      " 203: 2,\n",
-      " 205: 2,\n",
-      " 206: 2,\n",
-      " 209: 2,\n",
-      " 210: 2,\n",
-      " 212: 2,\n",
-      " 215: 2,\n",
-      " 218: 2,\n",
-      " 220: 2,\n",
-      " 223: 2,\n",
-      " 225: 2,\n",
-      " 228: 2,\n",
-      " 230: 2,\n",
-      " 232: 2,\n",
-      " 234: 2,\n",
-      " 235: 2,\n",
-      " 238: 2,\n",
-      " 242: 2,\n",
-      " 245: 2,\n",
-      " 246: 2,\n",
-      " 247: 2,\n",
-      " 248: 2,\n",
-      " 251: 2,\n",
-      " 252: 2,\n",
-      " 254: 2,\n",
-      " 255: 2,\n",
-      " 258: 2,\n",
-      " 259: 2,\n",
-      " 260: 2,\n",
-      " 262: 2,\n",
-      " 266: 2,\n",
-      " 269: 2,\n",
-      " 272: 2,\n",
-      " 273: 2,\n",
-      " 274: 2,\n",
-      " 276: 2,\n",
-      " 277: 2,\n",
-      " 279: 2,\n",
-      " 281: 2,\n",
-      " 283: 2,\n",
-      " 284: 2,\n",
-      " 285: 2,\n",
-      " 287: 2,\n",
-      " 288: 2,\n",
-      " 289: 2,\n",
-      " 291: 2,\n",
-      " 294: 2,\n",
-      " 295: 2,\n",
-      " 303: 2,\n",
-      " 308: 2,\n",
-      " 309: 2,\n",
-      " 310: 2,\n",
-      " 317: 2,\n",
-      " 319: 2,\n",
-      " 324: 2,\n",
-      " 325: 2,\n",
-      " 326: 2,\n",
-      " 327: 2,\n",
-      " 329: 2,\n",
-      " 330: 2,\n",
-      " 337: 2,\n",
-      " 343: 2,\n",
-      " 347: 2,\n",
-      " 348: 2,\n",
-      " 351: 2,\n",
-      " 353: 2,\n",
-      " 359: 2,\n",
-      " 360: 2,\n",
-      " 361: 2,\n",
-      " 362: 2,\n",
-      " 363: 2,\n",
-      " 369: 2,\n",
-      " 371: 2,\n",
-      " 372: 2,\n",
-      " 375: 2,\n",
-      " 376: 2,\n",
-      " 377: 2,\n",
-      " 378: 2,\n",
-      " 381: 2,\n",
-      " 384: 2,\n",
-      " 385: 2,\n",
-      " 386: 2,\n",
-      " 391: 2,\n",
-      " 392: 2,\n",
-      " 393: 2,\n",
-      " 394: 2,\n",
-      " 400: 2,\n",
-      " 403: 2,\n",
-      " 405: 2,\n",
-      " 412: 2,\n",
-      " 413: 2,\n",
-      " 415: 2,\n",
-      " 419: 2,\n",
-      " 420: 2,\n",
-      " 421: 2,\n",
-      " 422: 2,\n",
-      " 426: 2,\n",
-      " 428: 2,\n",
-      " 429: 2,\n",
-      " 430: 2,\n",
-      " 433: 2,\n",
-      " 434: 2,\n",
-      " 437: 2,\n",
-      " 442: 2,\n",
-      " 444: 2,\n",
-      " 447: 2,\n",
-      " 448: 2,\n",
-      " 449: 2,\n",
-      " 453: 2,\n",
-      " 454: 2,\n",
-      " 455: 2,\n",
-      " 460: 2,\n",
-      " 463: 2,\n",
-      " 467: 2,\n",
-      " 469: 2,\n",
-      " 470: 2,\n",
-      " 473: 2,\n",
-      " 474: 2,\n",
-      " 477: 2,\n",
-      " 479: 2,\n",
-      " 480: 2,\n",
-      " 484: 2,\n",
-      " 485: 2,\n",
-      " 487: 2,\n",
-      " 489: 2,\n",
-      " 493: 2,\n",
-      " 494: 2,\n",
-      " 495: 2,\n",
-      " 496: 2,\n",
-      " 498: 2,\n",
-      " 499: 2,\n",
-      " 505: 2,\n",
-      " 508: 2,\n",
-      " 510: 2,\n",
-      " 512: 2,\n",
-      " 513: 2,\n",
-      " 514: 2,\n",
-      " 515: 2,\n",
-      " 516: 2,\n",
-      " 518: 2,\n",
-      " 519: 2,\n",
-      " 520: 2,\n",
-      " 522: 2,\n",
-      " 524: 2}\n"
+      "Number of duplicated IDs:  301\n",
+      "{1: 3, 2: 2, 3: 2, 4: 3, 5: 3, 6: 2, 7: 3, 8: 3, 9: 3, 10: 2, 11: 2, 12: 3, 13: 3, 14: 2, 15: 3, 16: 3, 17: 3, 18: 3, 19: 2, 20: 3, 22: 2, 23: 3, 25: 2, 26: 3, 27: 3, 28: 3, 29: 3, 30: 2, 31: 3, 32: 3, 33: 3, 34: 3, 35: 2, 36: 3, 37: 2, 38: 3, 39: 3, 40: 3, 41: 3, 42: 3, 43: 3, 44: 2, 45: 3, 46: 2, 47: 3, 48: 2, 49: 2, 50: 3, 51: 3, 53: 2, 54: 3, 55: 3, 56: 2, 57: 2, 58: 2, 59: 3, 60: 3, 61: 3, 62: 2, 63: 2, 64: 3, 65: 3, 66: 2, 67: 2, 68: 2, 69: 2, 70: 3, 71: 3, 72: 3, 73: 3, 74: 3, 75: 3, 76: 3, 77: 3, 78: 3, 79: 2, 80: 3, 81: 3, 82: 3, 83: 2, 84: 2, 85: 3, 86: 3, 87: 2, 88: 2, 89: 2, 90: 2, 91: 3, 92: 2, 93: 3, 95: 3, 96: 2, 97: 3, 98: 3, 99: 2, 100: 3, 101: 2, 102: 2, 103: 2, 104: 3, 105: 3, 106: 3, 107: 2, 108: 3, 109: 3, 110: 3, 111: 3, 112: 2, 113: 3, 114: 2, 115: 2, 116: 2, 117: 3, 120: 3, 121: 2, 122: 2, 123: 2, 124: 2, 125: 2, 126: 2, 127: 3, 128: 2, 129: 3, 130: 3, 131: 2, 132: 3, 133: 2, 134: 2, 135: 2, 137: 2, 139: 2, 140: 2, 143: 2, 144: 2, 148: 2, 151: 2, 153: 2, 154: 2, 157: 2, 161: 2, 162: 2, 167: 2, 171: 2, 175: 2, 176: 2, 179: 2, 181: 2, 182: 2, 185: 2, 187: 2, 190: 2, 191: 2, 192: 2, 193: 2, 195: 2, 200: 2, 201: 2, 203: 2, 205: 2, 206: 2, 209: 2, 210: 2, 212: 2, 215: 2, 218: 2, 220: 2, 223: 2, 225: 2, 228: 2, 230: 2, 232: 2, 234: 2, 235: 2, 238: 2, 242: 2, 245: 2, 246: 2, 247: 2, 248: 2, 251: 2, 252: 2, 254: 2, 255: 2, 258: 2, 259: 2, 260: 2, 262: 2, 266: 2, 269: 2, 272: 2, 273: 2, 274: 2, 276: 2, 277: 2, 279: 2, 281: 2, 283: 2, 284: 2, 285: 2, 287: 2, 288: 2, 289: 2, 291: 2, 294: 2, 295: 2, 303: 2, 308: 2, 309: 2, 310: 2, 317: 2, 319: 2, 324: 2, 325: 2, 326: 2, 327: 2, 329: 2, 330: 2, 337: 2, 343: 2, 347: 2, 348: 2, 351: 2, 353: 2, 359: 2, 360: 2, 361: 2, 362: 2, 363: 2, 369: 2, 371: 2, 372: 2, 375: 2, 376: 2, 377: 2, 378: 2, 381: 2, 384: 2, 385: 2, 386: 2, 391: 2, 392: 2, 393: 2, 394: 2, 400: 2, 403: 2, 405: 2, 412: 2, 413: 2, 415: 2, 419: 2, 420: 2, 421: 2, 422: 2, 426: 2, 428: 2, 429: 2, 430: 2, 433: 2, 434: 2, 437: 2, 442: 2, 444: 2, 447: 2, 448: 2, 449: 2, 453: 2, 454: 2, 455: 2, 460: 2, 463: 2, 467: 2, 469: 2, 470: 2, 473: 2, 474: 2, 477: 2, 479: 2, 480: 2, 484: 2, 485: 2, 487: 2, 489: 2, 493: 2, 494: 2, 495: 2, 496: 2, 498: 2, 499: 2, 505: 2, 508: 2, 510: 2, 512: 2, 513: 2, 514: 2, 515: 2, 516: 2, 518: 2, 519: 2, 520: 2, 522: 2, 524: 2}\n"
      ]
     }
    ],
@@ -1763,7 +1464,9 @@
     "id_counter = Counter(non_unique_IDs) # count how many times each ID is duplicated\n",
     "sorted_id_counter = dict(sorted(id_counter.items())) # sort the dictionary by key\n",
     "\n",
-    "pprint.pprint(sorted_id_counter) "
+    "print(\"Number of duplicated IDs: \", len(sorted_id_counter))\n",
+    "print(sorted_id_counter)\n",
+    "# pprint.pprint(sorted_id_counter, compact=True) # readable format"
    ]
   },
   {
