chore: change alert boxes

--- a/dementia_project/dementia_analysis.ipynb
+++ b/dementia_project/dementia_analysis.ipynb
@@ -72,7 +72,7 @@
    "source": [
     "<h2><font color='green'>2. Explore the dataset</font></h2>\n",
     "\n",
-    "<div class=\"alert alert-block\">\n",
+    "<div class=\"alert alert-block alert-info\">\n",
     "    <b>Shape:</b> First, let's find out the shape of the data.\n",
     "</div>"
    ]
@@ -114,7 +114,7 @@
     "\n",
     "#### 1. Identify Data Types\n",
     "\n",
-    "<div class=\"alert alert-block\">\n",
+    "<div class=\"alert alert-block alert-info\">\n",
     "    <b>Head:</b> Let's view the initial three entities (rows) of the dataset. Visually easier to interpret when transposed.\n",
     "</div>"
    ]
@@ -333,7 +333,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div class=\"alert alert-block\">\n",
+    "<div class=\"alert alert-block alert-info\">\n",
     "    <b>Data types:</b> Now, we show the various data types of the dataframe.\n",
     "</div>"
    ]
@@ -387,7 +387,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div class=\"alert alert-block alert-info\">\n",
+    "<div class=\"alert alert-block alert-success\">\n",
     "    We see the presence of three data types: int64, float64, and objects. \n",
     "</div>\n",
     "\n",
@@ -405,7 +405,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div class=\"alert alert-block\">\n",
+    "<div class=\"alert alert-block alert-info\">\n",
     "    <b>Dementia feature:</b> Let's locate the 34 null entries in the dementia feature.\n",
     "</div>"
    ]
@@ -1643,7 +1643,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div class=\"alert alert-block\">\n",
+    "<div class=\"alert alert-block alert-info\">\n",
     "    <b>Statistics:</b> Let's apply the describe method to display the descriptive statistics of the dementia dataframe.\n",
     "</div>"
    ]
