adjust x tick labels in confusion matrix, to align visualisation

--- a/dementia_project/model_training.ipynb
+++ b/dementia_project/model_training.ipynb
@@ -693,8 +693,9 @@
     "    labels = [f\"{v1}\\n{v2}\\n{v3}\" for v1, v2, v3 in\n",
     "            zip(group_names,group_counts,group_percentages)]\n",
     "    labels = np.asarray(labels).reshape(2,2)\n",
-    "    \n",
-    "    sns.heatmap(cf_matrix, annot=labels, fmt=\"\", cmap='Blues')\n",
+    "    ax = sns.heatmap(cf_matrix, annot=labels, fmt=\"\", cmap='Blues',xticklabels=['True', 'False'], yticklabels=['True', 'False'])\n",
+    "    ax.xaxis.set_label_position('top')\n",
+    "\n",
     "    plt.xlabel(\"actual\")\n",
     "    plt.ylabel(\"predicted\")\n",
     "    plt.title(f\"{title}: {round(accuracy*100, 2)} %\")\n",
