Final clean up, translate to english, add a few more notes and remove some duplicate information
in order to increase readability

--- a/dementia_project/model_training.ipynb
+++ b/dementia_project/model_training.ipynb
@@ -1012,6 +1012,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Printing to highlight the change in the minority class "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 69,
    "metadata": {},
@@ -1636,7 +1643,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Hyperpararmeter tuning is done using a pipe gridsearchCV method that searches through a grid trying every combination defined "
+    "Hyperpararmeter tuning is done using a imbalanced pipeline GridSearchCV method that searches through the parameter grid trying every combination defined choosen the best parameters that fit the refit metric, in our case it's set for recall score as weigh the false negatives highly. \n",
+    "\n",
+    "The pipeline oversamples data of the minority class during the Cross-validation process (each k-fold) for the model being trained/tuned, in our case using the SMOTE Tomeks-links. "
    ]
   },
   {
